# ckb-testtool

./: AGENTS.md  Cargo.toml  README.md
.github/: rust.yml
.github/workflows/: cargo-publish.yml  release.yml  rust.yml
src/: builtin.rs  context.rs  lib.rs  tx_verifier.rs
tests/: native_simulator_cases.rs  normal_cases.rs
tests/test-contracts/: Cargo.toml  Makefile  README.md
tests/test-contracts/contracts/simple-spawn/: Cargo.toml  Makefile  README.md
tests/test-contracts/contracts/simple-spawn/src/: main.rs
tests/test-contracts/native-simulators/simple-spawn-sim/: Cargo.toml  README.md
tests/test-contracts/native-simulators/simple-spawn-sim/src/: lib.rs
