[package]
name = "ckb-testtool"
version = "0.15.0"
authors = ["Nervos Network"]
edition = "2021"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/ckb-testtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native-simulator = [ "libloading", "serde_json" ]

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"
ckb-chain-spec = "0.200.0-rc1"
ckb-types = "0.200.0-rc1"
ckb-error = "0.200.0-rc1"
ckb-script = "0.200.0-rc1"
ckb-hash = "0.200.0-rc1"
ckb-jsonrpc-types = "0.200.0-rc1"
ckb-crypto = "0.200.0-rc1"
ckb-resource = "0.200.0-rc1"
ckb-verification = "0.200.0-rc1"
ckb-traits = "0.200.0-rc1"
ckb-mock-tx-types = "0.200.0-rc1"
libloading = { version = "0.8.4", optional = true }
serde_json = { version = "1.0", optional = true }
faster-hex = "0.6.1"

[dev-dependencies]
anyhow = "1.0"
ckb-system-scripts = "0.5"
