[package]
name = "ckb-testtool"
version = "1.0.1"
authors = ["Nervos Network"]
edition = "2024"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/ckb-testtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native-simulator = [ "libloading", "serde_json" ]

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"
ckb-chain-spec = "1.0.0"
ckb-types = "1.0.0"
ckb-error = "1.0.0"
ckb-script = "1.0.0"
ckb-hash = "1.0.0"
ckb-jsonrpc-types = "1.0.0"
ckb-crypto = "1.0.0"
ckb-resource = "1.0.0"
ckb-verification = "1.0.0"
ckb-traits = "1.0.0"
ckb-mock-tx-types = "1.0.0"
libloading = { version = "0.8.4", optional = true }
serde_json = { version = "1.0", optional = true }
faster-hex = "0.6.1"

[dev-dependencies]
anyhow = "1.0"
ckb-system-scripts = "0.5"
